# claw-hooks

./: AGENTS.md  Cargo.toml  Makefile  README.ja.md  README.md  package-lock.json
.github/workflows/: ci.yml  release.yml
scripts/: benchmark.sh
src/: cli.rs  main.rs
src/config/: mod.rs  service.rs  types.rs  validation.rs
src/domain/: error.rs  logger.rs  mod.rs  parser.rs  types.rs
src/domain/filters/: chain.rs  custom_filter.rs  dd_filter.rs  extension_filter.rs  filter_trait.rs  kill_filter.rs  mod.rs  rm_filter.rs  stop_filter.rs
src/service/: adapter.rs  hook_service.rs  mod.rs
tests/: integration_test.rs
