[package]
name = "claw-hooks"
version = "26.1.104"
edition = "2021"
rust-version = "1.75"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "AI coding agent hook system for Claude Code, Cursor, and Windsurf"
license = "MIT"
repository = "https://github.com/owayo/claw-hooks"
keywords = ["cli", "hooks", "ai", "claude-code", "cursor"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
time = { version = "0.3.45", features = ["formatting", "local-offset", "macros"] }
tracing-appender = "0.2.4"
dirs = "6.0.0"
regex = "1.12.2"
thiserror = "2.0.17"
anyhow = "1.0.100"

[dependencies.tree-sitter]
version = "0.26.3"
optional = true

[dependencies.tree-sitter-bash]
version = "0.25.1"
optional = true

[features]
default = ["ast-parser"]
ast-parser = ["tree-sitter", "tree-sitter-bash"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
